﻿
September 7th, 2022
	- Changed Mod Icon
	- Added Items folder
	- Added Lucille item file
	- Added Lucille item sprite
	- Added Projectiles folder
	- Successfully added Lucille item, currently has no properties
September 9th, 2022
	- Added recipe for Lucille, 10 wood, 1 stone, 5 souls of might
	- Added projectile image for Lucille
	- Added projectile file for Lucille
	- Successfully added projectile! Lucille is now a working weapon!
	- TODO: to add a pool ball projectile when you 'fire' the weapon
September 12th, 2022
	- Made Lucille shoot eight ball, but then it stops shooting normal spear projectile
	- TODO: fix spear :)
	- Okay so you can't make something shoot multiple projectiles using the method I'm using
	- eightball items are now unused
September 14th, 2022
	- Added moonlight_greatsword.png to Items
	- Began implimenting the Moonlight Greatsword
	- Successfully implimented Moonlight Greatsword in basic form, does not shoot or glow yet...
	- missing assemblies error
	- see comments on lines 46 & 50 in MoonlightGreatsword.cs
September 16th, 2022
	- Glow still isn't working, MoonlightGreatsword_glow now not being used, trying dusts insted
	- Adding Dusts folder, and custom dust
	- Added ElectricDust file and png
	- Added dust effects to MoonlightGreatsword
	- TODO: add projectile to MoonlightGreatsword and improve lighting effects